Add omegaverse.info to sites built with middleman

--- a/source/community/built-using-middleman.html.erb
+++ b/source/community/built-using-middleman.html.erb
@@ -74,6 +74,7 @@ title: "Sites Built Using Middleman"
   <li><a href="http://www.librario.de/" target="_blank">http://www.librario.de</a></li>
   <li><a href="http://www.madebytally.com/" target="_blank">http://www.madebytally.com</a></li>
   <li><a href="http://www.alpine-lab.com" target="_blank">http://www.alpine-lab.com</a></li>
+  <li><a href="http://omegaverse.info" target="_blank">http://omegaverse.info</a> (frontend to the <a href="http://github.com/movitto/omega">Omega</a> simulation)</li>
 </ul>
 
 <h1>Mobile Apps Built Using Middleman</h1>
