Added the new Sass (official) website to the list.

--- a/source/community/built-using-middleman.html.erb
+++ b/source/community/built-using-middleman.html.erb
@@ -5,6 +5,7 @@ title: "Sites Built Using Middleman"
 <h1>Sites Built Using Middleman</h1>
 
 <ul>
+  <li><a href="http://sass-lang.com" target="_blank">http://sass-lang.com</a></li>
   <li><a href="http://startexploding.com" target="_blank">http://startexploding.com</a></li>
   <li><a href="http://sassandcompass.com" target="_blank">http://sassandcompass.com</a></li>
   <li><a href="http://craftyblues.com" target="_blank">http://craftyblues.com</a></li>
