--- a/source/stylesheets/_articles.scss
+++ b/source/stylesheets/_articles.scss
@@ -23,7 +23,7 @@
     display: none;
   }
   #search {
-    @include span-columns(7);
+    @include span-columns(8 omega);
     text-align: right;
     margin-top: 9px;
   }
@@ -33,7 +33,7 @@
   @include span-columns(5);
   margin-top: 15px;
   div:first-child h3{
-    margin-top: 0; 
+    margin-top: 0;
   }
   footer {
     margin: 20px 0;
@@ -57,7 +57,7 @@
     padding: 0.5em 1em;
     margin: 1.5em 0;
     overflow: auto;
-    @include border-radius(4px); 
+    @include border-radius(4px);
   }
   footer {
     border-top: 1px solid #c6bda8;
@@ -67,10 +67,10 @@
     p {
       margin: 0;
       &.left {
-        @include float-left; 
+        @include float-left;
       }
       &.right {
-        @include float-right; 
+        @include float-right;
       }
     }
   }
