Organize files follow navigation

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -47,6 +47,6 @@ layout: layout
       <%= partial 'layouts/nav' %>
     </nav>
 
-    <%= partial "support" %>
-  </div>  
+    <%= partial "layouts/support" %>
+  </div>
 </section>
