--- a/source/layouts/_nav.erb
+++ b/source/layouts/_nav.erb
@@ -1,15 +1,15 @@
 <div class="toc-block">
   <h3>Middleman Basics</h3>
   <ul>
-      <li><a href="/getting-started/">Getting Started</a></li>
-      <li><a href="/templates/">Templates</a></li>
-      <li><a href="/helpers/">Template Helpers</a></li>
-      <li><a href="/frontmatter/">Frontmatter</a></li>
-      <li><a href="/dynamic-pages/">Dynamic Pages</a></li>
-      <li><a href="/asset-pipeline/">Asset Pipeline</a></li>
-      <li><a href="/pretty-urls/">Pretty URLs (Directory Indexes)</a></li>
-      <li><a href="/livereload/">LiveReload</a></li>
-      <li><a href="/blogging/">Blogging</a></li>
+      <li><a href="/basics/getting-started/">Getting Started</a></li>
+      <li><a href="/basics/templates/">Templates</a></li>
+      <li><a href="/basics/helpers/">Template Helpers</a></li>
+      <li><a href="/basics/frontmatter/">Frontmatter</a></li>
+      <li><a href="/basics/dynamic-pages/">Dynamic Pages</a></li>
+      <li><a href="/basics/asset-pipeline/">Asset Pipeline</a></li>
+      <li><a href="/basics/pretty-urls/">Pretty URLs (Directory Indexes)</a></li>
+      <li><a href="/basics/livereload/">LiveReload</a></li>
+      <li><a href="/basics/blogging/">Blogging</a></li>
   </ul>
 </div>
 
@@ -33,8 +33,8 @@
       <li><a href="http://directory.middlemanapp.com/#/extensions/all">Extensions</a></li>
       <li><a href="http://directory.middlemanapp.com/#/templates/all">Project Templates</a></li>
       <li><a href="http://directory.middlemanapp.com/#/extensions/deployment">Deployment Solutions</a></li>
-      <li><a href="/community/built-using-middleman/">Sites Built Using Middleman</a></li>
       <li><a href="http://forum.middlemanapp.com/" target="_blank">Community Forum</a></li>
       <li><a href="https://github.com/middleman/middleman" target="_blank">GitHub Repository</a></li>
+      <li><a href="/community/built-using-middleman/">Sites Built Using Middleman</a></li>
   </ul>
 </div>
