--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -37,7 +37,7 @@ layout: layout
   </div>
 
   <div class="container">
-    <p class="intro">Middleman is a static site generator using all the shortcuts and tools in modern web development. <%= link_to 'Getting started', '/getting-started/' %>.</p>
+    <p class="intro">Middleman is a static site generator using all the shortcuts and tools in modern web development. <%= link_to 'Getting started', '/basics/getting-started/' %>.</p>
     <p class="intro sns">
       <span><i class="icon-github"> <%= link_to 'Watch', 'https://github.com/middleman/middleman' %></i></span>
       <span><i class="icon-twitter"> <%= link_to 'Follow @middlemanapp', 'http://twitter.com/middlemanapp' %></i></span>
