Add nebulab.it website and blog

--- a/source/community/built-using-middleman.html.erb
+++ b/source/community/built-using-middleman.html.erb
@@ -76,6 +76,7 @@ title: "Sites Built Using Middleman"
   <li><a href="http://www.madebytally.com/" target="_blank">http://www.madebytally.com</a></li>
   <li><a href="http://www.alpine-lab.com" target="_blank">http://www.alpine-lab.com</a></li>
   <li><a href="http://omegaverse.info" target="_blank">http://omegaverse.info</a> (frontend to the <a href="http://github.com/movitto/omega">Omega</a> simulation)</li>
+  <li><a href="http://nebulab.it" target="_blank">http://nebulab.it</a></li>
 </ul>
 
 <h1>Mobile Apps Built Using Middleman</h1>
@@ -112,6 +113,7 @@ title: "Sites Built Using Middleman"
   <li><a href="http://robots.thoughtbot.com" target="_blank">http://robots.thoughtbot.com</a></li>
   <li><a href="http://abhra.in/" target="_blank">http://abhra.in</li>
   <li><a href="http://blog.riemann.cc" target="_blank">http://blog.riemann.cc</a> (<a href="https://github.com/rriemann/rriemann.github.io/tree/source">source code</a>)</li>
+  <li><a href="http://nebulab.it/blog" target="_blank">http://nebulab.it/blog</li>
 </ul>
 
 <footer>
