Add schukin.com blog

--- a/source/community/built-using-middleman.html.erb
+++ b/source/community/built-using-middleman.html.erb
@@ -115,6 +115,7 @@ published: true
   <li><a href="http://abhra.in/" target="_blank">http://abhra.in</li>
   <li><a href="http://blog.riemann.cc" target="_blank">http://blog.riemann.cc</a> (<a href="https://github.com/rriemann/rriemann.github.io/tree/source">source code</a>)</li>
   <li><a href="http://nebulab.it/blog" target="_blank">http://nebulab.it/blog</li>
+  <li><a href="http://schukin.com/" target="_blank">http://schukin.com/</li>
 </ul>
 
 <footer>
