Add Japanese guide using i18n from middlemanjp.github.io
- Add Japanese guide.
- Navigation Links defined in locale files.
- `locale_prefix` method provide 'prefix string' to use link.
- middleman's version is updated, because i18n feature had some bugs in
  ver 3.1.x.

--- a/source/layouts/article.erb
+++ b/source/layouts/article.erb
@@ -1,7 +1,7 @@
 <% wrap_layout :layout do %>
   <header id="header">
     <div class="container">
-      <h1><%= link_to image_tag("mm-blue-w-text.svg", :width => 225, :height => 225, :alt => "Middleman"), "/", { :class => 'logo' } %></h1>
+      <h1><%= link_to image_tag("mm-blue-w-text.svg", :width => 225, :height => 225, :alt => "Middleman"), "#{locale_prefix}/", { :class => 'logo' } %></h1>
       <p class="console">$ gem install middleman</p>
       <div id="search">
         <form>
