--- a/source/layouts/_nav.erb
+++ b/source/layouts/_nav.erb
@@ -1,40 +1,40 @@
 <div class="toc-block">
-  <h3>Middleman Basics</h3>
+  <h3><%= t("basics.title") %></h3>
   <ul>
-      <li><a href="/basics/getting-started/">Getting Started</a></li>
-      <li><a href="/basics/templates/">Templates</a></li>
-      <li><a href="/basics/helpers/">Template Helpers</a></li>
-      <li><a href="/basics/frontmatter/">Frontmatter</a></li>
-      <li><a href="/basics/dynamic-pages/">Dynamic Pages</a></li>
-      <li><a href="/basics/asset-pipeline/">Asset Pipeline</a></li>
-      <li><a href="/basics/pretty-urls/">Pretty URLs (Directory Indexes)</a></li>
-      <li><a href="/basics/livereload/">LiveReload</a></li>
-      <li><a href="/basics/blogging/">Blogging</a></li>
+      <li><a href="<%= locale_prefix %>/basics/getting-started/"><%= t("basics.getting_started") %></a></li>
+      <li><a href="<%= locale_prefix %>/basics/templates/"><%= t("basics.templates") %></a></li>
+      <li><a href="<%= locale_prefix %>/basics/helpers/"><%= t("basics.template_helpers") %></a></li>
+      <li><a href="<%= locale_prefix %>/basics/frontmatter/"><%= t("basics.frontmatter") %></a></li>
+      <li><a href="<%= locale_prefix %>/basics/dynamic-pages/"><%= t("basics.dynamic_pages") %></a></li>
+      <li><a href="<%= locale_prefix %>/basics/asset-pipeline/"><%= t("basics.asset_pipeline") %></a></li>
+      <li><a href="<%= locale_prefix %>/basics/pretty-urls/"><%= t("basics.pretty_urls") %></a></li>
+      <li><a href="<%= locale_prefix %>/basics/livereload/"><%= t("basics.livereload") %></a></li>
+      <li><a href="<%= locale_prefix %>/basics/blogging/"><%= t("basics.blogging") %></a></li>
   </ul>
 </div>
 
 <div class="toc-block">
-  <h3>Advanced Features</h3>
+  <h3><%= t("advanced.title") %></h3>
   <ul>
-      <li><a href="/advanced/configuration/">Configuring Your Site</a></li>
-      <li><a href="/advanced/local-data/">Local Data</a></li>
-      <li><a href="/advanced/localization/">Localization (i18n)</a></li>
-      <li><a href="/advanced/sitemap/">The Sitemap</a></li>
-      <li><a href="/advanced/rack-middleware/">Rack Middleware</a></li>
-      <li><a href="/advanced/custom/">Custom Extensions</a></li>
-      <li><a href="/advanced/file-size-optimization/">File Size Optimization</a></li>
-      <li><a href="/advanced/improving-cacheability/">Improving Cacheability</a></li>
+      <li><a href="<%= locale_prefix %>/advanced/configuration/"><%= t("advanced.configuration") %></a></li>
+      <li><a href="<%= locale_prefix %>/advanced/local-data/"><%= t("advanced.local_data") %></a></li>
+      <li><a href="<%= locale_prefix %>/advanced/localization/"><%= t("advanced.localization") %></a></li>
+      <li><a href="<%= locale_prefix %>/advanced/sitemap/"><%= t("advanced.sitemap") %></a></li>
+      <li><a href="<%= locale_prefix %>/advanced/rack-middleware/"><%= t("advanced.rack_middleware") %></a></li>
+      <li><a href="<%= locale_prefix %>/advanced/custom/"><%= t("advanced.custom") %></a></li>
+      <li><a href="<%= locale_prefix %>/advanced/file-size-optimization/"><%= t("advanced.file_size_optimization") %></a></li>
+      <li><a href="<%= locale_prefix %>/advanced/improving-cacheability/"><%= t("advanced.improving_cacheability") %></a></li>
   </ul>
 </div>
 
 <div class="toc-block">
-  <h3>Community</h3>
+  <h3><%= t("community.title") %></h3>
   <ul>
-      <li><a href="http://directory.middlemanapp.com/#/extensions/all">Extensions</a></li>
-      <li><a href="http://directory.middlemanapp.com/#/templates/all">Project Templates</a></li>
-      <li><a href="http://directory.middlemanapp.com/#/extensions/deployment">Deployment Solutions</a></li>
-      <li><a href="http://forum.middlemanapp.com/" target="_blank">Community Forum</a></li>
-      <li><a href="https://github.com/middleman/middleman" target="_blank">GitHub Repository</a></li>
-      <li><a href="/community/built-using-middleman/">Sites Built Using Middleman</a></li>
+      <li><a href="http://directory.middlemanapp.com/#/extensions/all"><%= t("community.extensions") %></a></li>
+      <li><a href="http://directory.middlemanapp.com/#/templates/all"><%= t("community.templates") %></a></li>
+      <li><a href="http://directory.middlemanapp.com/#/extensions/deployment"><%= t("community.deployment") %></a></li>
+      <li><a href="http://forum.middlemanapp.com/" target="_blank"><%= t("community.forum") %></a></li>
+      <li><a href="https://github.com/middleman/middleman" target="_blank"><%= t("community.github") %></a></li>
+      <li><a href="<%= locale_prefix %>/community/built-using-middleman/"><%= t("community.built_using_middleman") %></a></li>
   </ul>
 </div>
