--- a/source/localizable/community/built-using-middleman.jp.html.erb
+++ b/source/localizable/community/built-using-middleman.jp.html.erb
@@ -1,5 +1,6 @@
 ---
 title: "Middleman 採用サイト"
+published: true
 ---
 
 <h1>Middleman 採用サイト</h1>
@@ -114,6 +115,7 @@ title: "Middleman 採用サイト"
   <li><a href="http://abhra.in/" target="_blank">http://abhra.in</li>
   <li><a href="http://blog.riemann.cc" target="_blank">http://blog.riemann.cc</a> (<a href="https://github.com/rriemann/rriemann.github.io/tree/source">source code</a>)</li>
   <li><a href="http://nebulab.it/blog" target="_blank">http://nebulab.it/blog</li>
+  <li><a href="http://schukin.com/" target="_blank">http://schukin.com/</li>
 </ul>
 
 <footer>
