--- a/source/localizable/index.html.erb
+++ b/source/localizable/index.html.erb
@@ -3,8 +3,8 @@ layout: layout
 ---
 
 <header id="hero">
-  <h1><%= link_to image_tag("mm-blue-w-text.svg", :width => 225, :height => 225, :alt => "Middleman"), "/", { :class => 'logo' } %></h1>
-  <h2>makes developing websites simple</h2>
+  <h1><%= link_to image_tag("mm-blue-w-text.svg", :width => 225, :height => 225, :alt => "Middleman"), "#{locale_prefix}/", { :class => 'logo' } %></h1>
+  <h2><%= t("index.headline") %></h2>
 </header>
 
 <section role="main">
@@ -37,7 +37,7 @@ layout: layout
   </div>
 
   <div class="container">
-    <p class="intro">Middleman is a static site generator using all the shortcuts and tools in modern web development. <%= link_to 'Getting started', '/basics/getting-started/' %>.</p>
+    <p class="intro"><%= t("index.description") %><%= link_to t("index.getting_started"), "#{locale_prefix}/basics/getting-started/" %>.</p>
     <p class="intro sns">
       <span><i class="icon-github"> <%= link_to 'Watch', 'https://github.com/middleman/middleman' %></i></span>
       <span><i class="icon-twitter"> <%= link_to 'Follow @middlemanapp', 'http://twitter.com/middlemanapp' %></i></span>
