--- a/source/localizable/community/built-using-middleman.html.erb
+++ b/source/localizable/community/built-using-middleman.html.erb
@@ -116,6 +116,7 @@ published: true
   <li><a href="http://blog.riemann.cc" target="_blank">http://blog.riemann.cc</a> (<a href="https://github.com/rriemann/rriemann.github.io/tree/source">source code</a>)</li>
   <li><a href="http://nebulab.it/blog" target="_blank">http://nebulab.it/blog</li>
   <li><a href="http://schukin.com/" target="_blank">http://schukin.com/</li>
+  <li><a href="http://fearmediocrity.co.uk/" target="_blank">http://fearmediocrity.co.uk/ (<a href="https://github.com/FearMediocrity/fearmediocrity.co.uk">source code</a>)</li>
 </ul>
 
 <footer>
