Add RubyConferences.org to the site list

--- a/source/localizable/community/built-using-middleman.html.erb
+++ b/source/localizable/community/built-using-middleman.html.erb
@@ -78,6 +78,7 @@ published: true
   <li><a href="http://www.alpine-lab.com" target="_blank">http://www.alpine-lab.com</a></li>
   <li><a href="http://omegaverse.info" target="_blank">http://omegaverse.info</a> (frontend to the <a href="http://github.com/movitto/omega">Omega</a> simulation)</li>
   <li><a href="http://nebulab.it" target="_blank">http://nebulab.it</a></li>
+  <li><a href="http://rubyconferences.org" target="_blank">http://rubyconferences.org</a> (<a href="https://github.com/ruby-conferences/ruby-conferences-site">source code</a></li>
 </ul>
 
 <h1><%= t("built.mobile") %></h1>
