--- a/source/layouts/_support.erb
+++ b/source/layouts/_support.erb
@@ -17,7 +17,8 @@
   </div>
 
   <div class="donate">
-    <script data-gittip-username="tdreyno"
+    <script data-gittip-username="middleman"
+        data-gittip-widget="button"
         src="//gttp.co/v1.js"></script>
     <p><br><a href="https://spb.io/s/4dXbHBorC3" target="_blank" class="sbe-button">Donate!</a><br><br></p>
   </div>
