fix "link url are broken" in comminuty/built-using-middleman

--- a/source/layouts/_site.erb
+++ b/source/layouts/_site.erb
@@ -1,5 +1,5 @@
 <li>
-  <%= link_to site.url %>
+  <%= link_to site.url, site.url %>
   <% if site.source %>
     (<%= link_to 'source code', site.source %>)
   <% end %>
