Added initial Directory Structure docs: middleman-guides/issues#61 Added Sourcey and source code to "Built Using Middleman"

--- a/source/layouts/_nav.erb
+++ b/source/layouts/_nav.erb
@@ -8,6 +8,7 @@
       <li><a href="<%= locale_prefix %>/basics/dynamic-pages/"><%= t("basics.dynamic_pages") %></a></li>
       <li><a href="<%= locale_prefix %>/basics/asset-pipeline/"><%= t("basics.asset_pipeline") %></a></li>
       <li><a href="<%= locale_prefix %>/basics/pretty-urls/"><%= t("basics.pretty_urls") %></a></li>
+      <li><a href="<%= locale_prefix %>/basics/directory-structure/"><%= t("basics.directory_structure") %></a></li>
       <li><a href="<%= locale_prefix %>/basics/livereload/"><%= t("basics.livereload") %></a></li>
       <li><a href="<%= locale_prefix %>/basics/blogging/"><%= t("basics.blogging") %></a></li>
   </ul>
