--- a/source/layouts/_support.erb
+++ b/source/layouts/_support.erb
@@ -1,9 +1,7 @@
 <div id="support">
-  <!-- BuySellAds Zone Code -->
-  <div id="bsap_1280677" class="bsarocks bsap_989fc05e297a314a92ad3f33cef85fd4"></div>
-  <!-- End BuySellAds Zone Code -->
+  <script type="text/javascript" src="http://cdn.adpacks.com/adpacks.js?legacyid=1280677&zoneid=1386&key=989fc05e297a314a92ad3f33cef85fd4&serve=C6SD52Y&placement=middlemanappcom&circle=dev" id="_adpacks_js"></script>
 
-  <div class="sponsor">
+  <!--div class="sponsor">
     <h4>Sponsors</h4>
 
     <a href="http://fjords.cc" target="_blank">
@@ -21,5 +19,5 @@
         data-gittip-widget="button"
         src="//gttp.co/v1.js"></script>
     <p><br><a href="https://spb.io/s/4dXbHBorC3" target="_blank" class="sbe-button">Donate!</a><br><br></p>
-  </div>
+  </div-->
 </div>
