Update where you actually have to edit the site list from

--- a/source/localizable/community/built-using-middleman.html.erb
+++ b/source/localizable/community/built-using-middleman.html.erb
@@ -28,5 +28,5 @@ published: true
 </ul>
 
 <footer>
-  <%= link_to t("built.fork"), "https://github.com/middleman/middleman-guides/blob/master/source/localizable/community/built-using-middleman.html.erb" %>
+  <%= link_to t("built.fork"), "https://github.com/middleman/middleman-guides/blob/master/data/sites.yml" %>
 </footer>
