--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -1,6 +1,6 @@
 @import "compass";
 @import "compass/reset";
-@import "susy";
+@import "susyone";
 
 /*			Settings for Susy
 --------------------------------------------------- */
