--- a/source/layouts/_nav.erb
+++ b/source/layouts/_nav.erb
@@ -1,41 +1,57 @@
 <div class="toc-block">
   <h3><%= t("basics.title") %></h3>
   <ul>
-      <li><a href="<%= locale_prefix %>/basics/getting-started/"><%= t("basics.getting_started") %></a></li>
-      <li><a href="<%= locale_prefix %>/basics/templates/"><%= t("basics.templates") %></a></li>
-      <li><a href="<%= locale_prefix %>/basics/helpers/"><%= t("basics.template_helpers") %></a></li>
-      <li><a href="<%= locale_prefix %>/basics/frontmatter/"><%= t("basics.frontmatter") %></a></li>
-      <li><a href="<%= locale_prefix %>/basics/dynamic-pages/"><%= t("basics.dynamic_pages") %></a></li>
-      <li><a href="<%= locale_prefix %>/basics/asset-pipeline/"><%= t("basics.asset_pipeline") %></a></li>
-      <li><a href="<%= locale_prefix %>/basics/pretty-urls/"><%= t("basics.pretty_urls") %></a></li>
-      <li><a href="<%= locale_prefix %>/basics/directory-structure/"><%= t("basics.directory_structure") %></a></li>
-      <li><a href="<%= locale_prefix %>/basics/livereload/"><%= t("basics.livereload") %></a></li>
-      <li><a href="<%= locale_prefix %>/basics/blogging/"><%= t("basics.blogging") %></a></li>
+    <li><%= link_to "#{ t("basics.install")}", "#{locale_prefix}/basics/install" %></li>
+    <li><%= link_to "#{ t("basics.start_new_site")}", "#{locale_prefix}/basics/start_new_site" %></li>
+    <li><%= link_to "#{ t("basics.directory_structure")}", "#{locale_prefix}/basics/directory-structure" %></li>
+    <li><%= link_to "#{ t("basics.development_cycle")}", "#{locale_prefix}/basics/development_cycle" %></li>
+    <li><%= link_to "#{ t("basics.build_deploy")}", "#{locale_prefix}/basics/build_and_deploy" %></li>
+    <li><%= link_to "#{ t("basics.frontmatter")}", "#{locale_prefix}/basics/frontmatter" %></li>
+    <li><%= link_to "#{ t("basics.templates")}", "#{locale_prefix}/basics/templates" %></li>
+    <li><%= link_to "#{ t("basics.helper_methods")}", "#{locale_prefix}/basics/helper_methods" %></li>
+    <li><%= link_to "#{ t("basics.layouts")}", "#{locale_prefix}/basics/layouts" %></li>
+    <li><%= link_to "#{ t("basics.partials")}", "#{locale_prefix}/basics/partials" %></li>
+    <li><%= link_to "#{ t("basics.blogging")}", "#{locale_prefix}/basics/blogging" %></li>
   </ul>
 </div>
 
 <div class="toc-block">
   <h3><%= t("advanced.title") %></h3>
   <ul>
-      <li><a href="<%= locale_prefix %>/advanced/configuration/"><%= t("advanced.configuration") %></a></li>
-      <li><a href="<%= locale_prefix %>/advanced/local-data/"><%= t("advanced.local_data") %></a></li>
-      <li><a href="<%= locale_prefix %>/advanced/localization/"><%= t("advanced.localization") %></a></li>
-      <li><a href="<%= locale_prefix %>/advanced/sitemap/"><%= t("advanced.sitemap") %></a></li>
-      <li><a href="<%= locale_prefix %>/advanced/rack-middleware/"><%= t("advanced.rack_middleware") %></a></li>
-      <li><a href="<%= locale_prefix %>/advanced/custom/"><%= t("advanced.custom") %></a></li>
-      <li><a href="<%= locale_prefix %>/advanced/file-size-optimization/"><%= t("advanced.file_size_optimization") %></a></li>
-      <li><a href="<%= locale_prefix %>/advanced/improving-cacheability/"><%= t("advanced.improving_cacheability") %></a></li>
+    <li><%= link_to "#{ t("advanced.configuration")}", "#{locale_prefix}/advanced/configuration" %></li>
+    <li><%= link_to "#{ t("advanced.project_templates")}", "#{locale_prefix}/advanced/project_templates" %></li>
+    <li><%= link_to "#{ t("advanced.dynamic_pages")}", "#{locale_prefix}/advanced/dynamic_pages" %></li>
+    <li><%= link_to "#{ t("advanced.data_files")}", "#{locale_prefix}/advanced/data_files" %></li>
+    <li><%= link_to "#{ t("advanced.localization")}", "#{locale_prefix}/advanced/localization" %></li>
+    <li><%= link_to "#{ t("advanced.asset_pipeline")}", "#{locale_prefix}/advanced/asset_pipeline" %></li>
+    <li><%= link_to "#{ t("advanced.rack_middleware")}", "#{locale_prefix}/advanced/rack_middleware" %></li>
+    <li><%= link_to "#{ t("advanced.sitemap")}", "#{locale_prefix}/advanced/sitemap" %></li>
+    <li><%= link_to "#{ t("advanced.pretty_urls")}", "#{locale_prefix}/advanced/pretty_urls" %></li>
+    <li><%= link_to "#{ t("advanced.improving_cacheability")}", "#{locale_prefix}/advanced/improving_cacheability" %></li>
+    <li><%= link_to "#{ t("advanced.improving_cacheability")}", "#{locale_prefix}/advanced/improving_cacheability" %></li>
+    <li><%= link_to "#{ t("advanced.file_size_optimization")}", "#{locale_prefix}/advanced/file_size_optimization" %></li>
+    <li><%= link_to "#{ t("advanced.custom_extensions")}", "#{locale_prefix}/advanced/custom_extensions" %></li>
+  </ul>
+</div>
+
+<div class="toc-block">
+  <h3><%= t("open_source.title") %></h3>
+  <ul>
+      <li><%= t("open_source.custom_extension") %></li>
+      <li><%= t("open_source.template") %></li>
+      <li><%= t("open_source.service") %></li>
+      <li><%= t("open_source.deployment_solution") %></li>
   </ul>
 </div>
 
 <div class="toc-block">
   <h3><%= t("community.title") %></h3>
   <ul>
-      <li><a href="http://directory.middlemanapp.com/#/extensions/all"><%= t("community.extensions") %></a></li>
-      <li><a href="http://directory.middlemanapp.com/#/templates/all"><%= t("community.templates") %></a></li>
-      <li><a href="http://directory.middlemanapp.com/#/extensions/deployment"><%= t("community.deployment") %></a></li>
-      <li><a href="http://forum.middlemanapp.com/" target="_blank"><%= t("community.forum") %></a></li>
-      <li><a href="https://github.com/middleman/middleman" target="_blank"><%= t("community.github") %></a></li>
-      <li><a href="<%= locale_prefix %>/community/built-using-middleman/"><%= t("community.built_using_middleman") %></a></li>
+    <li><%= link_to "#{ t("community.extensions")}", "http://directory.middlemanapp.com/#/extensions/all" %></li>
+    <li><%= link_to "#{ t("community.templates")}", "http://directory.middlemanapp.com/#/templates/all" %></li>
+    <li><%= link_to "#{ t("community.deployment")}", "http://directory.middlemanapp.com/#/extensions/deployment/all" %></li>
+    <li><%= link_to "#{ t("community.forum")}", "http://forum.middlemanapp.com/",  :target => "_blank"%></li>
+    <li><%= link_to "#{ t("community.github")}", "https://github.com/middleman/middleman", :target => "_blank" %></li>
+    <li><%= link_to "#{ t("community.built_using_middleman")}", "#{locale_prefix}/community/built_using_middleman" %></li>
   </ul>
 </div>
