--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -5,21 +5,12 @@
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
     <meta content='width=device-width, initial-scale=1.0' name='viewport'>
     <%= stylesheet_link_tag "site" %>
-    <%= stylesheet_link_tag "http://fonts.googleapis.com/css?family=Questrial|Arvo" %>
+    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
     <title><%= page_title %></title>
   </head>
   <body>
     <%= yield %>
-
-    <footer id="footer">
-      <div class="container">
-        <p class="copyright">
-          &copy; 2011-2014 <%= link_to "Thomas Reynolds", "http://awardwinningfjords.com" %>.<br>
-          Hosting graciously provided by <%= link_to "Divshot", "http://www.divshot.com" %>.
-        </p>
-        <p class="link"><%= link_to "Fork and edit this guide on Github", edit_guide_url %></p>
-      </div>
-    </footer>
+    <%= partial "localizable/footer" %>
 
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <%= javascript_include_tag "highlight.pack" %>
