--- a/source/stylesheets/modules/_hero.scss
+++ b/source/stylesheets/modules/_hero.scss
@@ -1,5 +1,5 @@
 .hero {
-  background: $base-accent-color;
+  background: $base-hero-color;
   text-align: center;
 }
 
@@ -26,7 +26,7 @@
 .hero-description-item {
   color: white;
   float: left;
-  font-size: $base-font-size * 1.15;
+  font-size: $base-font-size;
   margin-right: 0;
 
   &:not(:last-child) {
@@ -36,6 +36,10 @@
       content: "|";
       padding-left: 1em;
     }
+  }
+
+  @include media($medium-screen-up) {
+    font-size: $base-font-size * 1.15;
   }
 }
 
@@ -48,5 +52,5 @@
       @include span-columns(8 of 12);
       @include shift(2);
     }
-  } 
+  }
 }
