--- a/source/stylesheets/_side-nav.scss
+++ b/source/stylesheets/_side-nav.scss
@@ -1,3 +1,15 @@
 #toc {
   @include span-columns(3);
 }
+
+.toc-block {
+  margin: 2em 0;
+}
+
+.docs-section-heading {
+  margin-bottom: 0.6em;
+}
+
+.doc-item {
+  margin-bottom: .65em;
+}
