Add example sites portion of landing page
* Add color variables for example sites section
* Update styles of example sites
* Remove unused SVGs and use PNGs instead

--- a/source/localizable/index.html.erb
+++ b/source/localizable/index.html.erb
@@ -76,3 +76,5 @@ layout: layout
     <p class="intro"><%= t("index.description") %> <%= link_to t("index.getting_started"), "#{locale_prefix}/basics/getting-started/" %>.</p>
   </div>
 </section>
+
+<%= partial "example-sites" %>
