--- a/source/stylesheets/base/_variables.scss
+++ b/source/stylesheets/base/_variables.scss
@@ -43,6 +43,7 @@ $golden-yellow: #ECC561;
 $navy: #446184;
 $slate-gray: #8990A1;
 $translucent-gray: rgba(black, 0.25);
+$translucent-white: rgba(white, 0.5);
 $saturated-blue: #4280CA;
 $washed-out-gray: #F9F9F8;
 
