update header levels and typography styles

--- a/source/layouts/article.erb
+++ b/source/layouts/article.erb
@@ -36,9 +36,9 @@
       <%= partial 'layouts/nav' %>
     </nav>
 
-    <article id="main" role="main">
+    <main id="main" role="main">
       <%= yield %>
-    </article>
+    </main>
 
     <%# <%= partial "layouts/support" %>
   </div>
