--- a/source/stylesheets/base/_variables.scss
+++ b/source/stylesheets/base/_variables.scss
@@ -1,3 +1,10 @@
+// Project Settings
+$prefix-for-webkit:    false;
+$prefix-for-mozilla:   false;
+$prefix-for-microsoft: false;
+$prefix-for-opera:     false;
+$prefix-for-spec:      false;
+
 // Typography
 $sans-serif: "Fira Sans", $helvetica;
 $serif: $georgia;
