--- a/source/stylesheets/modules/_footer.scss
+++ b/source/stylesheets/modules/_footer.scss
@@ -15,6 +15,11 @@
       color: $footer-link-hover-color;
     }
   }
+
+  p {
+    font-size: $base-font-size;
+    margin: 0 auto 0.5em;
+  }
 }
 
 .footer-column {
