--- a/source/stylesheets/modules/_layout.scss
+++ b/source/stylesheets/modules/_layout.scss
@@ -1,23 +1,10 @@
 .container {
   @include outer-container;
-  padding: 0 1em;
+  padding: 0 $gutter;
 }
 
-.main {
-  @include span-columns(8);
-  @include shift(1);
-}
-
-main {
-  h2,
-  h3,
-  h4,
-  h5,
-  h6 {
-    margin: 1.3em 0 0.8em;
-  }
-
-  li{
-    margin: 0.75em;
-  }
+.centered-content {
+  @include fill-parent;
+  @include clearfix;
+  text-align: center;
 }
