Add nav partial and move nav markup to partial
- Rename navigation partials to be more semantic
- Change href links to use link_to method
- Add contribute translation
- Rename classes in nav
- Change hover color of cta in nav
- Change contribute pathway
- Move logo link to one line
- Move logo link to two lines
- Update nav to docs
- Move code style from layout to typography
- Add new side-nav stylesheet and align doc elements
- Update header typography styles in docs
- Add search bar to docs
- Consolidate stylesheets

--- a/source/stylesheets/modules/_layout.scss
+++ b/source/stylesheets/modules/_layout.scss
@@ -2,3 +2,22 @@
   @include outer-container;
   padding: 0 1em;
 }
+
+.main {
+  @include span-columns(8);
+  @include shift(1);
+}
+
+main {
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    margin: 1.3em 0 0.8em;
+  }
+
+  li{
+    margin: 0.75em;
+  }
+}
