--- a/source/stylesheets/modules/_modules.scss
+++ b/source/stylesheets/modules/_modules.scss
@@ -1,5 +1,6 @@
 @import "layout";
+@import "global-nav";
+@import "documentation-nav";
 @import "hero";
-@import "top-nav";
 @import "browser";
 @import "footer";
