--- a/source/layouts/article.erb
+++ b/source/layouts/article.erb
@@ -1,8 +1,8 @@
 <% wrap_layout :layout do %>
   <header id="header">
-    <div class="container">
-      <h1><%= link_to image_tag("mm-blue-w-text.svg", :width => 225, :height => 225, :alt => "Middleman"), "#{locale_prefix}/", { :class => 'logo' } %></h1>
-      <p class="console">$ gem install middleman</p>
+    <%= partial 'partials/global_nav' %>
+
+    <section class="container">
       <div id="search">
         <form>
           <input type="text" id="st-search-input" class="st-search-input" placeholder="Search the documentation" />
@@ -25,21 +25,17 @@
             entry.parentNode.insertBefore(script, entry);
           }());
         </script>
-      </div>
-
-      <a class="toc-nav-link icon-arrow-down" href="#toc">Menu</a>
+      </section>
     </div>
   </header>
 
   <div class="container">
     <nav id="toc">
-      <%= partial 'layouts/nav' %>
+      <%= partial 'layouts/documentation_nav' %>
     </nav>
 
-    <article id="main" role="main">
+    <main class="main" role="main">
       <%= yield %>
-    </article>
-
-    <%= partial "layouts/support" %>
+    </main>
   </div>
 <% end %>
