--- a/source/localizable/index.html.erb
+++ b/source/localizable/index.html.erb
@@ -3,37 +3,20 @@ layout: layout
 ---
 
 <header class="hero">
-  <aside class="top-nav container">
-    <h1 class="logo-text"><a href="/"><%= t("index.logo") %></a></h1>
-    <nav class="site-nav">
-      <ul>
-        <li class="site-nav-item">
-          <%= link_to "Contribute", "https://github.com/middleman/middleman",
-            target: "_blank" %>
-        </li>
-        <li class="site-nav-item">
-          <%= link_to t("index.docs"),
-            "#{locale_prefix}/basics/getting-started/", class: "cta" %>
-        </li>
-      </ul>
-    </nav>
-  </aside>
+  <%= partial 'partials/global_nav' %>
   <div class="hero-content container">
-    <div class="hero-content-headline">
-      <%= link_to image_tag("logos/middleman-logo.svg"), "#{locale_prefix}/",
-        class: "headline-content-logo" %>
+    <section class="hero-content-headline">
+      <h1 class="headline-content-logo">
+        <%= link_to image_tag("logos/middleman-logo.svg"), "#{locale_prefix}/" %>
+      </h1>
       <h2 class="hero-headline"><%= t("index.headline") %></h2>
+
       <div class="hero-description">
-        <h3 class="hero-description-item">
-          <%= t("index.description.first") %>
-        </h3>
-        <h3 class="hero-description-item">
-          <%= t("index.description.second")%>
-        </h3>
-        <h3 class="hero-description-item">
-          <%= t("index.description.third")%>
-        </h3>
+        <h3 class="hero-description-item"><%= t("index.description.first") %></h3>
+        <h3 class="hero-description-item"><%= t("index.description.second")%></h3>
+        <h3 class="hero-description-item"><%= t("index.description.third")%></h3>
       </div>
+
     </div>
     <div class="hero-banner-container container">
       <div class="browser">
