--- a/source/stylesheets/solarized_light.css
+++ b/source/stylesheets/solarized_light.css
@@ -4,10 +4,11 @@ Orginal Style from ethanschoonover.com/solarized (c) Jeremy Hull <sourdrums@gmai
 
 */
 
-/*pre code {
-  display: block; padding: 0.5em;
-  background: #fdf6e3; color: #657b83;
-}*/
+pre code {
+  display: block;
+  margin: 1em 0;
+  padding: .7em;
+}
 
 pre .comment,
 pre .template_comment,
