Style and place search bar in docs
* Style documentation nav links
* Move search bar to partial
* Reduce spacing in doc nav items
* Refactor start a new site doc
* Add helper for active link - need dev to refactor

--- a/source/layouts/_site.erb
+++ b/source/layouts/_site.erb
@@ -1,6 +1,6 @@
 <li>
-  <%= link_to site.title || site.url, site.url %>
+  <%= link_to site.title || site.url, site.url, class: "built-with-middleman-link" %>
   <% if site.source %>
-    (<%= link_to 'source code', site.source %>)
+    <%= link_to t("built.source_code"), site.source, class: "source-code-link" %>
   <% end %>
 </li>
